commented out some unneeded aliases

--- a/ghc/.ghc/ghci.conf
+++ b/ghc/.ghc/ghci.conf
@@ -15,6 +15,6 @@ import Control.Monad.IO.Class
 :set prompt "λ: "
 
 :set -fno-warn-unused-imports
-:def hlint const . return $ ":! hlint \"src\""
-:def hoogle \s -> return $ ":! hoogle --count=15 \"" ++ s ++ "\""
-:def pl \s -> return $ ":! pointfree \"" ++ s ++ "\""
+-- :def hlint const . return $ ":! hlint \"src\""
+-- :def hoogle \s -> return $ ":! hoogle --count=15 \"" ++ s ++ "\""
+-- :def pl \s -> return $ ":! pointfree \"" ++ s ++ "\""
