fixed email / name

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = jetho@gmx.de
-	name = jetho
+	email = brandon.ivy@gmail.com
+	name = Brandon Ivy
 [core]
 	editor = /usr/bin/vim
 [push]
