--- a/tmuxinator/.tmuxinator/template.yml
+++ b/tmuxinator/.tmuxinator/template.yml
@@ -10,10 +10,10 @@ root: ~/data/repositories/template/
 pre: git pull
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: export PATH=/opt/ghc-7.10.1/bin:$PATH
+# pre_window: export PATH=/opt/ghc-7.10.1/bin:$PATH
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
-tmux_options: -2
+tmux_options: -2  # force 256 colors
 
 # Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
 # tmux_command: byobu
