updating readme (not done) and updated some config files

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = brandon.ivy@gmail.com
-	name = Brandon Ivy
+	email = developer@local
+	name = Developer
 [core]
 	editor = /usr/bin/vim
 [push]
