fix tmux start errors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -92,7 +92,7 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # start default session on server start
 new-session -s $USER 
-send-keys 'clear && screenfetch -c 1,15' 'C-m'
+send-keys 'clear && neofetch' 'C-m'
 
 
 ### COLORS ###
@@ -114,5 +114,6 @@ set -g status-justify centre           # center window list for clarity
 # visual notification of activity in other windows
 setw -g monitor-activity on
 
-source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+# TODO: re-implement if needed/desired
+#source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
 
