add todos, remove neofetch from tmux startup, modify zprofile to start xmonad after login

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -92,7 +92,7 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # start default session on server start
 new-session -s $USER 
-send-keys 'clear && neofetch' 'C-m'
+#send-keys 'clear && neofetch' 'C-m'
 
 
 ### COLORS ###
