--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 # Tmux settings
+#
+# TODO: change 'highlighted' window border color - currently red, should be green
 
 # Set XTerm key bindings
 setw -g xterm-keys on
