add redshift, add python pip modules to PATH, add DS_Store to garbage, add todos

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 # Tmux settings
 #
-# TODO: change 'highlighted' window border color - currently red, should be green
+# TODO: 
+#  - change 'highlighted' window border color - currently red, should be green
+#  - increase spacing between window names in bottom bar OR do something else to improve separation
 
 # Set XTerm key bindings
 setw -g xterm-keys on
