--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+
 ## STUFF THAT CAN START BEFORE XMONAD
 # set capslock = escape
 setxkbmap -option caps:escape
@@ -13,32 +14,19 @@ xsetroot -cursor_name left_ptr
 #sh ~/.xmonad/bin/conkybar.sh &
 #sh ~/.xmonad/bin/musicbar.sh &
 
-
-# Load resources  # TODO: remove when we're sure we don't need this
-#xrdb -merge .Xresources
-
-
-# Fire up apps
-#xfce4-power-manager &
-
-#if [ -x /usr/bin/nm-applet ] ; then
-#   nm-applet --sm-disable &
-#fi
-
 # open desktop panels (after 1s pause - may need to increase in future)
 # TODO: re-enable, move down 2px, edit config 
 #conky -p 1 -c ~/.conky/conky_desktop &
 
 
-
 # Set up an icon tray. Reads transparency from .xmobarrc to match it
 # NOTE: change --widthtype to "percent" to set a fixed tray width
-# NOTE: needs to start _after_ xmobar, and only sleeps for 3 seconds,
-#       so xmonad/xmobar need to finish startup by then
+# NOTE: needs to start _after_ xmobar, and only sleeps for 4 seconds,
+#       so xmonad/xmobar needs to finish startup by then
 # TODO: above problem will be avoided if this wait is replaced with a
 #       smarter one ie "wait until xmobar binary is running, then wait
 #       500 milliseconds"
-sleep 3 && trayer --edge top --align right \
+sleep 4 && trayer --edge top --align right \
     --margin 0 \
     --widthtype request --width 5 \
     --heighttype pixel --height 16 \
