--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -62,6 +62,7 @@ bind-key -n M-left prev
 
 
 # Smart pane switching with awareness of vim splits
+# Ctrl+hjkl = move around
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -98,6 +99,8 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 new-session -s $USER 
 #send-keys 'clear && neofetch' 'C-m'
 
+# don't rename windows automatically
+set-option -g allow-rename off
 
 ### COLORS ###
 
