--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -25,6 +25,14 @@ xsetroot -cursor_name left_ptr
 sleep 4 && compton -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --blur-background-fixed --blur-kern="11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
 
 
+# apply wallpaper+colorscheme combo
+# TODO: finish this. ideally it will change colors everywhere possible
+wal -R
+#wal -i ~/Downloads/wallpapers/bridge_iceland__micki-spollen-1137994-unsplash__crop_1080p.png --backend colorz
+#wal -i ~/Downloads/wallpapers/aerial_city__JC_Gellidon_unisplash__crop_1080p.png --backend colorz --saturate 0.4
+#wal -i ~/Downloads/wallpapers/alena-aenami-lights1k1.jpg --backend colorz
+#wal --theme sexy-tango
+
 
 # open desktop panels (after 4s pause - may need to increase in future)
 conky -p 4 -c ~/.conky/conky_log &
