configure git to automatically handle line endings

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,5 +3,7 @@
 	name = Developer
 [core]
 	editor = /usr/bin/vim
+        # automatically convert line endings (lf vs crlf)
+	autocrlf = input
 [push]
 	default = simple
