add TONS of miktex files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,323 @@ xmonad-x86_64-linux
 .*.swp
 .*.swo
 
+
+# files installed by miktex
+/bin/bin/a2ping
+/bin/bin/a5toa4
+/bin/bin/afm2afm
+/bin/bin/afm2tfm
+/bin/bin/amstex
+/bin/bin/arara
+/bin/bin/arlatex
+/bin/bin/authorindex
+/bin/bin/autoinst
+/bin/bin/autosp
+/bin/bin/axohelp
+/bin/bin/bagpipe
+/bin/bin/bagpipex
+/bin/bin/bg5conv
+/bin/bin/bg5latex
+/bin/bin/bg5pdflatex
+/bin/bin/bg5platex
+/bin/bin/bg5pluslatex
+/bin/bin/bg5pluspdflatex
+/bin/bin/bg5ppdflatex
+/bin/bin/bib2gls
+/bin/bin/bib2xhtml
+/bin/bin/bibdoiadd
+/bin/bin/biber
+/bin/bin/bibexport
+/bin/bin/bibhtml
+/bin/bin/bibsort
+/bin/bin/bibtex
+/bin/bin/bibtex8
+/bin/bin/bibtexu
+/bin/bin/bibzbladd
+/bin/bin/biokey2html1
+/bin/bin/biokey2html2
+/bin/bin/biokey2html3
+/bin/bin/birm
+/bin/bin/bmeditor
+/bin/bin/bplain
+/bin/bin/bundledoc
+/bin/bin/cef5conv
+/bin/bin/cef5latex
+/bin/bin/cef5pdflatex
+/bin/bin/cefconv
+/bin/bin/ceflatex
+/bin/bin/cefpdflatex
+/bin/bin/cefsconv
+/bin/bin/cefslatex
+/bin/bin/cefspdflatex
+/bin/bin/checkcites
+/bin/bin/chktex
+/bin/bin/cjk-gs-integrate
+/bin/bin/cluttex
+/bin/bin/convertgls2bib
+/bin/bin/creatdtx
+/bin/bin/cslatex
+/bin/bin/csplain
+/bin/bin/csvtools
+/bin/bin/ctan-o-mat
+/bin/bin/ctanbib
+/bin/bin/ctangle
+/bin/bin/ctanify
+/bin/bin/ctanupload
+/bin/bin/cweave
+/bin/bin/dad-to-utf8
+/bin/bin/depythontex
+/bin/bin/devnag
+/bin/bin/dosepsbin
+/bin/bin/dviasm
+/bin/bin/dvicopy
+/bin/bin/dviinfox
+/bin/bin/dvilollipop
+/bin/bin/dvilualatex
+/bin/bin/dvilualollipop
+/bin/bin/dviluatex
+/bin/bin/dvipdfm
+/bin/bin/dvipdfmx
+/bin/bin/dvipdft
+/bin/bin/dvipng
+/bin/bin/dvips
+/bin/bin/dvisvgm
+/bin/bin/dvitomp
+/bin/bin/dvitype
+/bin/bin/ebb
+/bin/bin/epsffit
+/bin/bin/epspdf
+/bin/bin/epstopdf
+/bin/bin/etex
+/bin/bin/etexdef
+/bin/bin/exceltex
+/bin/bin/extconv
+/bin/bin/extractbb
+/bin/bin/extractres
+/bin/bin/feynmf
+/bin/bin/fig4latex
+/bin/bin/findhyph
+/bin/bin/fribidixetex
+/bin/bin/fullref
+/bin/bin/gbklatex
+/bin/bin/gbkpdflatex
+/bin/bin/getmapdl
+/bin/bin/gfi-run
+/bin/bin/gftodvi
+/bin/bin/gftopk
+/bin/bin/gftype
+/bin/bin/gregorio
+/bin/bin/hbf2gf
+/bin/bin/ht
+/bin/bin/htcontext
+/bin/bin/htcopy
+/bin/bin/htlatex
+/bin/bin/htmex
+/bin/bin/htmove
+/bin/bin/httex
+/bin/bin/httexi
+/bin/bin/htxelatex
+/bin/bin/htxetex
+/bin/bin/ibyhyph
+/bin/bin/inimf
+/bin/bin/initex
+/bin/bin/isi2bibtex
+/bin/bin/jadetex
+/bin/bin/jamo-normalize
+/bin/bin/jfmutil
+/bin/bin/ketcindy
+/bin/bin/komkindex
+/bin/bin/kpsewhich
+/bin/bin/l3build
+/bin/bin/lacheck
+/bin/bin/lambda
+/bin/bin/latex
+/bin/bin/latex-git-log
+/bin/bin/latex-papersize
+/bin/bin/latex2man
+/bin/bin/latex2nemeth
+/bin/bin/latexdef
+/bin/bin/latexdiff
+/bin/bin/latexdiff-fast
+/bin/bin/latexdiff-so
+/bin/bin/latexdiff-vc
+/bin/bin/latexindent
+/bin/bin/latexmk
+/bin/bin/latexpand
+/bin/bin/latexrevise
+/bin/bin/lollipop
+/bin/bin/ltx2crossrefxml
+/bin/bin/ltximg
+/bin/bin/lualatex
+/bin/bin/lualatexdef
+/bin/bin/lualollipop
+/bin/bin/luamesh
+/bin/bin/luaotfload-tool
+/bin/bin/luatex
+/bin/bin/luatexdef
+/bin/bin/lwarpmk
+/bin/bin/m-tx
+/bin/bin/make4ht
+/bin/bin/makebase
+/bin/bin/makedtx
+/bin/bin/makefmt
+/bin/bin/makeglossaries
+/bin/bin/makeglossaries-lite
+/bin/bin/makeindex
+/bin/bin/makejmlrbook
+/bin/bin/makenameindex
+/bin/bin/makepk
+/bin/bin/maketfm
+/bin/bin/mathspic
+/bin/bin/mathspic113
+/bin/bin/merge-tex
+/bin/bin/mex
+/bin/bin/mf
+/bin/bin/mf2pt1
+/bin/bin/mfirstuc
+/bin/bin/mft
+/bin/bin/mgetmref
+/bin/bin/miktex-latex
+/bin/bin/miktex-lualatex
+/bin/bin/miktex-pdflatex
+/bin/bin/miktex-texlua
+/bin/bin/miktex-texluac
+/bin/bin/miktex-xdvipdfmx
+/bin/bin/miktex-xelatex
+/bin/bin/mk
+/bin/bin/mk4ht
+/bin/bin/mkcharacters
+/bin/bin/mkglyphlist
+/bin/bin/mkjobtexmf
+/bin/bin/mkluatexfontdb
+/bin/bin/mkocp
+/bin/bin/mkt1font
+/bin/bin/mllatex
+/bin/bin/mltex
+/bin/bin/mpost
+/bin/bin/mptopdf
+/bin/bin/musixflx
+/bin/bin/musixtex
+/bin/bin/odvicopy
+/bin/bin/ofm2opl
+/bin/bin/omega
+/bin/bin/OOopict
+/bin/bin/opl2ofm
+/bin/bin/orderrefs
+/bin/bin/ot2kpx
+/bin/bin/otp2ocp
+/bin/bin/outocp
+/bin/bin/ovf2ovp
+/bin/bin/ovp2ovf
+/bin/bin/pdfatfi
+/bin/bin/pdfcrop
+/bin/bin/pdfcslatex
+/bin/bin/pdfcsplain
+/bin/bin/pdfdetach
+/bin/bin/pdfetex
+/bin/bin/pdffonts
+/bin/bin/pdfimages
+/bin/bin/pdfinfo
+/bin/bin/pdfjadetex
+/bin/bin/pdflatex
+/bin/bin/pdflatexdef
+/bin/bin/pdflatexpicscale
+/bin/bin/pdfmex
+/bin/bin/pdfreview
+/bin/bin/pdfseparate
+/bin/bin/pdfshrink
+/bin/bin/pdftex
+/bin/bin/pdftex-quiet
+/bin/bin/pdftexdef
+/bin/bin/pdftocairo
+/bin/bin/pdftohtml
+/bin/bin/pdftoppm
+/bin/bin/pdftops
+/bin/bin/pdftosrc
+/bin/bin/pdftotext
+/bin/bin/pdfunite
+/bin/bin/pdfxmltex
+/bin/bin/pedigree
+/bin/bin/perltex
+/bin/bin/pfarrei
+/bin/bin/pgfplots
+/bin/bin/pk2bm
+/bin/bin/pkfix
+/bin/bin/pkfix-helper
+/bin/bin/pltotf
+/bin/bin/pmxab
+/bin/bin/pn2pdf
+/bin/bin/pooltype
+/bin/bin/prepmx
+/bin/bin/ps2pk
+/bin/bin/ps4pdf
+/bin/bin/psbook
+/bin/bin/psjoin
+/bin/bin/psnup
+/bin/bin/psresize
+/bin/bin/psselect
+/bin/bin/pst2pdf
+/bin/bin/pstops
+/bin/bin/pylatex
+/bin/bin/pypostproc
+/bin/bin/pypreproc
+/bin/bin/pythontex
+/bin/bin/rcsinfo
+/bin/bin/rebar
+/bin/bin/rubikrotation
+/bin/bin/scor2prt
+/bin/bin/sjisconv
+/bin/bin/sjislatex
+/bin/bin/sjispdflatex
+/bin/bin/songidx
+/bin/bin/splitindex
+/bin/bin/srcredact
+/bin/bin/sty2dtx
+/bin/bin/svn-multi
+/bin/bin/t4ht
+/bin/bin/tangle
+/bin/bin/tex
+/bin/bin/tex4ebook
+/bin/bin/tex4ht
+/bin/bin/texcount
+/bin/bin/texdef
+/bin/bin/texdiff
+/bin/bin/texdirflatten
+/bin/bin/texfot
+/bin/bin/texindy
+/bin/bin/texlua
+/bin/bin/texluac
+/bin/bin/texosquery
+/bin/bin/texosquery-jre5
+/bin/bin/texosquery-jre8
+/bin/bin/texworks
+/bin/bin/tftopl
+/bin/bin/thumbpdf
+/bin/bin/tpic2pdftex
+/bin/bin/ttf2afm
+/bin/bin/ttf2kotexfont
+/bin/bin/ttf2pk
+/bin/bin/ttf2tfm
+/bin/bin/urlbst
+/bin/bin/utf8-to-dad
+/bin/bin/utf8mex
+/bin/bin/vftovp
+/bin/bin/virmf
+/bin/bin/virtex
+/bin/bin/vpe
+/bin/bin/vpl2ovp
+/bin/bin/vpl2vpl
+/bin/bin/vpp
+/bin/bin/vptovf
+/bin/bin/weave
+/bin/bin/webquiz
+/bin/bin/xbb
+/bin/bin/xdv2pdf_mergemarks
+/bin/bin/xdvipdfmx
+/bin/bin/xelatex
+/bin/bin/xelatexdef
+/bin/bin/xetex
+/bin/bin/xetexdef
+/bin/bin/xindex
+/bin/bin/xindy
+/bin/bin/xmltex
