update info to reflect yshui's renaming of compton to picom

--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -22,7 +22,7 @@ xsetroot -cursor_name left_ptr
 # 9x9box blur
 #sleep 4 && compton -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --backend="glx" --blur-background-fixed --blur-kern="9,9,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
 # 11x11box blur
-sleep 4 && compton -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --blur-background-fixed --blur-kern="11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
+sleep 4 && picom -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --blur-background-fixed --blur-kern="11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
 
 
 # apply wallpaper+colorscheme combo
