modify tmux config: enable mouse and use more readable status bar colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,13 @@
 #  - change 'highlighted' window border color - currently red, should be green
 #  - increase spacing between window names in bottom bar OR do something else to improve separation
 
+# enable mouse-mode so we can scroll, resize panes, etc
+set -g mouse on
+
+# Set different background color for active window
+set -g window-status-current-bg red
+set -g window-status-current-fg black
+
 # Set XTerm key bindings
 setw -g xterm-keys on
 
@@ -120,6 +127,9 @@ set -g status-interval 5               # set update frequencey (default 15 secon
 set -g status-justify centre           # center window list for clarity
 # visual notification of activity in other windows
 setw -g monitor-activity on
+# change status bar color
+set -g status-bg colour16
+set -g status-fg "#bebebe"
 
 # TODO: re-implement if needed/desired
 #source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
