update tmux config to work with newer bind syntax (needed for tmux 2.8 and maybe earlier)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,8 +82,10 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+bind -Tcopy-mode-vi v send -X begin-selection
+#bind -t vi-copy 'y' copy-selection
+bind -Tcopy-mode-vi y send -X copy-selection
 
 # Copy & Paste from/to System Clipboard
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
